--- a/demo.html
+++ b/demo.html
@@ -401,6 +401,15 @@ Reveal.addEventListener( 'customevent', function() {
 
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
+
+				width: 1920,
+				height: 1080,
+				width: "100%",
+				height: "100%",
+				margin: 0,
+				minScale: 1,
+				maxScale: 1,
+
 				controls: true,
 				progress: true,
 				center: true,
