--- a/plugin/notes/notes.html
+++ b/plugin/notes/notes.html
@@ -174,7 +174,7 @@
 				.speaker-controls-notes .value {
 					margin-top: 5px;
 					line-height: 1.4;
-					font-size: 1.2em;
+					/*font-size: 1.2em;*/
 				}
 
 			/* Layout selector */
@@ -236,7 +236,7 @@
 				left: 0;
 				width: 100%;
 				height: 50%;
-				font-size: 1.25em;
+				/*font-size: 1.25em;*/
 			}
 
 			/* Speaker layout: Tall */
