--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 						<p>Alexander Seibel</p>
 						<p>
 							<small>
-								💼 Developer <a href="https://www.advades.com" target="blank"
+								💼 SAP Development Consultant <a href="https://www.advades.com" target="blank"
 									rel="noopener norefferer">@advades</a>
 							</small>
 						</p>
 						<p>
-							<small>Something Personal</small>
+							<small>❤️ &lt;code/&gt;</small>
 						</p>
 					</div>
 					<div class="col">
