Bilder fuer GitHub Pages angepasst

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>SAPUI5 Controls vs. UI5 Web Components</title>
 
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/reveal.css">
@@ -30,7 +30,7 @@
 <body>
 	<div class="reveal">
 		<div class="logo" </div> </div> <div class="slides">
-			<section data-background="\img\green.svg">
+			<section data-background="img\green.svg">
 				<aside class="notes">
 					Well.. If you cant spend your valentines day with someone you love, I hope you at least can spend with something you love. For exmaple coding, connecting with new people and learning cool new stuff, hopefully from my presentation as well, even though the topic isnt about love but about a, I would say peaceful battle without a winner between classical Ui5-Controls and Ui5 web components
 				</aside>
@@ -51,7 +51,7 @@
 						</p>
 					</div>
 					<div class="col">
-						<img class="profile" data-src="/img/Faby.jpg">
+						<img class="profile" data-src="img/Faby.jpg">
 					</div>
 				</div>
 				<aside class="notes">
@@ -75,7 +75,7 @@
 						</p>
 					</div>
 					<div class="col">
-						<img class="profile" data-src="/img/Alex.jpg">
+						<img class="profile" data-src="img/Alex.jpg">
 					</div>
 				</div>
 				<aside class="notes">
@@ -89,7 +89,7 @@
 
 			<section>
 				<h2>UI5con 2019</h2>
-				<img class="pic-center" data-src="/img/ui5con.jpg" data-fragment-index="1" >
+				<img class="pic-center" data-src="img/ui5con.jpg" data-fragment-index="1" >
 				<aside class="notes">
 					<ul>
 						<li>Lets consider this talk as some sort of journey that started at last years ui5con in sankt leon roth</li>
@@ -105,13 +105,13 @@
 				<h3>Performance Score</h3>
 				<div style="margin-top: 60px;" class="col-container">
 					<div class="col">
-						<img class="no-border" height="150px" data-src="/img/vue-logo.png" alt="">
+						<img class="no-border" height="150px" data-src="img/vue-logo.png" alt="">
 					</div>
 					<div class="col">
-						<img class="no-border" height="150px" data-src="/img/angular-logo.png" alt="">
+						<img class="no-border" height="150px" data-src="img/angular-logo.png" alt="">
 					</div>
 					<div class="col">
-						<img class="no-border" height="150px" data-src="/img/react-logo.png" alt="">
+						<img class="no-border" height="150px" data-src="img/react-logo.png" alt="">
 					</div>
 				</div>
 
@@ -143,16 +143,16 @@
 				<h2>Use Case</h2>
 				<div style="margin-top: 60px;" class="col-container">
 					<div class="col">
-						<img class="no-border" data-src="/img/sapolis.svg" alt="" height="200px">
+						<img class="no-border" data-src="img/sapolis.svg" alt="" height="200px">
 						<p><strong>SAP</strong>olis</p>
 					</div>
 					<div class="col">
-						<img class="no no-border" data-src="/img/university.svg" alt="" height="200px">
+						<img class="no no-border" data-src="img/university.svg" alt="" height="200px">
 						<p>European Union</p>
 					</div>
 
 				</div>
-				<image class="fragment fade-right ui-bob no-border" data-src="/img/uibob.gif" frameborder="0">
+				<image class="fragment fade-right ui-bob no-border" data-src="img/uibob.gif" frameborder="0">
 				<aside class="notes">
 					<ul>
 						<li>For this example:</li>
@@ -193,7 +193,7 @@
 				</aside>
 			</section>
 
-			<section data-background="/img/green.svg">
+			<section data-background="img/green.svg">
 				<h2 class="text-left test">Comparison</h2>
 				<aside class="notes">
 					<ul>
@@ -219,11 +219,11 @@
 					<div style="margin-top: 60px;" class="col-container">
 						<div style="margin-right: 20px;" class="col">
 							<p>SAPUI5</p>
-							<img class="no-border" width:"90%" data-src="/img/sapui5-doc.jpg" alt="">
+							<img class="no-border" width:"90%" data-src="img/sapui5-doc.jpg" alt="">
 						</div>
 						<div class="col fragment">
 							<p>UI5 Web Components</p>
-							<img class="no-border" width:"90%" data-src="/img/ui5webc-doc.jpg" alt="">
+							<img class="no-border" width:"90%" data-src="img/ui5webc-doc.jpg" alt="">
 						</div>
 					</div>
 					<aside class="notes">
@@ -277,7 +277,7 @@
 					<h2>None-Control-Elements</h2>
 					<div>
 						<p style="margin-bottom: 0;">SAPUI5</p>
-						<img class="no-border" width="90%" data-src="/img/code.PNG">
+						<img class="no-border" width="90%" data-src="img/code.PNG">
 
 						<!--<pre>
 							<code class="xml">
@@ -371,11 +371,11 @@
 					<div style="margin-top: 60px;" class="col-container">
 						<div style="margin-right: 20px;" width="90%" class="col">
 							<p>SAPUI5</p>
-							<img class="no-border" data-src="/img/performance-sapui5.PNG" alt="">
+							<img class="no-border" data-src="img/performance-sapui5.PNG" alt="">
 						</div>
 						<div class="col">
 							<p>UI5 Web Components</p>
-							<img class="no-border" width="90%" data-src="/img/performance-react.PNG" alt="">
+							<img class="no-border" width="90%" data-src="img/performance-react.PNG" alt="">
 						</div>
 					</div>
 					<aside class="notes">
@@ -408,7 +408,7 @@
 					<div style="margin-top: 60px;" class="col-container">
 						<div class="col">
 							<p>SAPUI5</p>
-							<img class="no-border" data-src="/img/landmarksbefore.png" alt="">
+							<img class="no-border" data-src="img/landmarksbefore.png" alt="">
 						</div>
 						<div class="col">
 							<p>UI5 Web Components</p>
@@ -458,7 +458,7 @@
 				</aside>
 			</section>
 
-			<section data-background="\img\green.svg">
+			<section data-background="img\green.svg">
 				<h2 class="text-left test">Conclusion</h2>
 				<aside class="notes">
 					<ul>
