--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 	<div class="reveal">
 		<div class="logo" </div> </div> <div class="slides">
-			<section data-background="img/green.svg">
+			<section data-background="img/green2.svg">
 				<aside class="notes">
 					Well.. If you cant spend your valentines day with someone you love, I hope you at least can spend with something you love. For exmaple coding, connecting with new people and learning cool new stuff, hopefully from my presentation as well, even though the topic isnt about love but about a, I would say peaceful battle without a winner between classical Ui5-Controls and Ui5 web components
 				</aside>
@@ -193,7 +193,7 @@
 				</aside>
 			</section>
 
-			<section data-background="img/green.svg">
+			<section data-background="img/green2.svg">
 				<h2 class="text-left test">Comparison</h2>
 				<aside class="notes">
 					<ul>
@@ -408,7 +408,7 @@
 					<div style="margin-top: 60px;" class="col-container">
 						<div class="col">
 							<p>SAPUI5</p>
-							<img class="no-border" data-src="img/landmarksbefore.png" alt="">
+							<img class="no-border" data-src="img/landmarksbefore.PNG" alt="">
 						</div>
 						<div class="col">
 							<p>UI5 Web Components</p>
@@ -458,7 +458,7 @@
 				</aside>
 			</section>
 
-			<section data-background="img/green.svg">
+			<section data-background="img/green2.svg">
 				<h2 class="text-left test">Conclusion</h2>
 				<aside class="notes">
 					<ul>
