--- a/index.html
+++ b/index.html
@@ -458,14 +458,31 @@
 				</aside>
 			</section>
 
-			<section data-background="img/green2.svg">
-				<h2 class="text-left test">Conclusion</h2>
+			<section data-background="img/green_blank.svg">
+				<h2 class="text-left">Conclusion</h2>
+				<div style="margin-top: 60px;" class="col-container">
+					<div class="col text-left">
+						<h3>SAPUI5 Controls</h3>
+						<p>
+							+ Documentation <br>
+							+ Scope<br>
+							+ Accessibility<br>
+						</p>
+					</div>
+					<div class="col text-left" style="margin-left: 150px;">
+						<h3 style="color: #fff;">UI5 Web Components</h3>
+						<p style="color: #fff;">
+							+ Flexibility<br>
+							+ Performance<br>
+						</p>
+					</div>
+				</div>
 				<aside class="notes">
 					<ul>
 						<li>SAPUI5 will stay your first choice for everything enterprise related. Due to the scope, the maintainability and better access to documentation</li>
 						<li>But if youre application can be clssified in the consumer environent, then the Ui5 web components with your framework of choice would be a better choice, cause they provide more flexibilty and have a better performance. Cause you all know, if my site takes to long to load, the consumer will just click the back button and chose a better performing site.</li>
 						<li>It really depends on the requirements of your project</li>
-						<li>UI5 evolution -> beide werden besser</li>
+						<li>UI5 evolution - beide werden besser</li>
 					</ul>
 				</aside>
 			</section>
